--- a/javascript_18.html
+++ b/javascript_18.html
@@ -2,10 +2,18 @@
 <html>
 <head>
     <script type="text/javascript">
+console.log = function(msg) {
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
       for (i = 0; i < 10; i++) {
           if (i === 3) { continue; }
           console.log("The number is " + i);
       }
+}
+}
     </script>
 </head>
 <body>
