--- a/javascript_03.html
+++ b/javascript_03.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <script type="text/javascript">
+	console.log = function(msg) {
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
     var language = "javascript";
     console.log(language[0]);
     console.log(language[1]);
@@ -13,6 +19,8 @@
     language[2] = 'C';
     language[3] = 'D';
     console.log(language); // javascript
+  }
+}
     </script>
 </head>
 <body>
