--- a/javascript_04.html
+++ b/javascript_04.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <script type="text/javascript">
+console.log = function(msg) {
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
     var a = 40;
     var b = 30;
     var c = 20;
@@ -9,6 +15,8 @@
     var e = 10;
     var sum = (a + b - c) * d / e;
     console.log(sum);
+	}
+   }
     </script>
 </head>
 <body>
