--- a/javascript_07.html
+++ b/javascript_07.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <script type="text/javascript">
+    console.log = function(msg) {
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
     var a = 10;
     var b = 10;
     var c = "10";
@@ -14,7 +20,8 @@
 
     console.log(a == b && typeof (a) == typeof (b));
     console.log(a == c && typeof (a) == typeof (c));
-
+	}
+}
     </script>
 </head>
 <body>
