--- a/javascript_11.html
+++ b/javascript_11.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <script type="text/javascript">
+console.log = function(msg) {
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
       var greeting;
       var time = 12;
 
@@ -13,6 +19,8 @@
           greeting = "Good evening";
       }
       console.log(greeting);
+}
+}
     </script>
 </head>
 <body>
