--- a/javascript_12.html
+++ b/javascript_12.html
@@ -1,3 +1,11 @@
+<script type="text/javascript">
+    console.log = function(msg) {
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
+
 switch(expression) {
    case n:
        // code block
