--- a/javascript_16.html
+++ b/javascript_16.html
@@ -2,10 +2,18 @@
 <html>
 <head>
     <script type="text/javascript">
+console.log = function(msg) {
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
       while {
           console.log("The number is " + i);
           i++;
       } do (i < 10);
+}
+}
     </script>
 </head>
 <body>
