--- a/javascript_28.html
+++ b/javascript_28.html
@@ -2,9 +2,17 @@
 <html>
 <head>
     <script type="text/javascript">
+console.log = function(msg) {
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
        console.log(age); // undefined
        var age = 10;
        console.log(age); // 10
+}
+}
     </script>
 </head>
 <body>
