--- a/javascript_13.html
+++ b/javascript_13.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <script type="text/javascript">
+    console.log = function(msg) {
+        var ul = document.getElementById("log");
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(msg));
+        ul.appendChild(li);
+    }
       var day;
       switch (new Date().getDay()) {
           case 0:
@@ -25,6 +31,8 @@
           case 6:
               day = "Saturday";
       }
+}
+}
       console.log(day);
     </script>
 </head>
